--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,98 +2,91 @@ version: '3.9'
 services:
   frontend:
     build: ./frontend
+    container_name: frontend
+    depends_on:
+      - backend
+    restart: always
     ports:
-      - "80:80"
+      - "5173:5173"
     networks:
       - frontend
 
-  user-service:
-    build: ./backend/user-service
-    ports:
-      - "5000:5000"
+  backend:
+    build: ./backend
+    container_name: backend
     environment:
-      - DATABASE_URL=postgresql://myuser:mypassword@db:5432/mydb
-    depends_on:
-      - db
-    networks:
-      - backend
-
-  doctor-service:
-    build: ./backend/doctor-service
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: clinic_db
     ports:
-      - "5001:5001"
-    environment:
-      - DATABASE_URL=postgresql://myuser:mypassword@db:5432/mydb
-    depends_on:
-      - db
-    networks:
-      - backend
-
-  appointment-service:
-    build: ./backend/appointment-service
-    ports:
-      - "5002:5002"
-    environment:
-      - DATABASE_URL=postgresql://myuser:mypassword@db:5432/mydb
+      - "5001:5000"
     depends_on:
       - db
     networks:
       - backend
 
   db:
-    image: postgres:13
+    image: postgres:latest
+    container_name: db
+    restart: always
+    env_file: .env
     environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: 1234
       POSTGRES_DB: mydb
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
     ports:
       - "5432:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - backend
 
-  pgadmin:
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@example.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    ports:
-      - "8080:80"
-    networks:
-      - monitoring
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: admin@example.com
+  #     PGADMIN_DEFAULT_PASSWORD: admin
+  #   ports:
+  #     - "8080:80"
+  #   networks:
+  #     - monitoring
 
   grafana:
-    image: grafana/grafana
-    ports:
-      - "3000:3000"
-    networks:
-      - monitoring
+      image: grafana/grafana
+      container_name: grafana
+      ports:
+        - "3000:3000"
+      environment:
+        - GF_SECURITY_ADMIN_PASSWORD=admin
+        - GF_SERVER_SERVE_FROM_SUB_PATH=true
+        - GF_SERVER_ROOT_URL=http://localhost/grafana/
+      volumes:
+        - grafana_data:/var/lib/grafana
+      networks:
+        - monitoring
 
-  jenkins:
-    image: jenkins/jenkins:lts
-    ports:
-      - "8081:8080"
-    volumes:
-      - jenkins_home:/var/jenkins_home
+  # jenkins:
+  #   image: jenkins/jenkins:lts
+  #   ports:
+  #     - "8081:8080"
+  #   volumes:
+  #     - jenkins_home:/var/jenkins_home
+  #   networks:
+  #     - frontend
+  #     - backend
+
+  reverse-proxy:
+    build: ./nginx
+    container_name: reverse-proxy
+    restart: always
     networks:
       - frontend
       - backend
-
-  nginx:
-    image: nginx:alpine
     ports:
-      - "5000:80"
+      - "80:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - frontend
-      - user-service
-      - doctor-service
-      - appointment-service
-    networks:
-      - frontend
-      - backend
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
 
 networks:
   frontend:
@@ -101,5 +94,6 @@ networks:
   monitoring:
 
 volumes:
-  db_data:
+  postgres_data:
+  grafana_data:
   jenkins_home:
