--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.25.1",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "react": "^19.1.0",
