--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     container_name: user-service
     build: ./backend/user-service
     ports:
-      - "5005:5001"    # Main API
+      - "5001:5001"    # Main API
     environment:
       - DATABASE_URL=postgresql://admin:1234@db:5432/mydb
     depends_on:
@@ -104,11 +104,14 @@ services:
 
   jenkins:
     container_name: jenkins
+    build: ./jenkins
     image: jenkins/jenkins:lts
     ports:
       - "8080:8080"
+      - "50000:50000"
     volumes:
       - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - frontend
       - backend
