--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -2,19 +2,21 @@ FROM jenkins/jenkins:lts
 
 USER root
 
-# ติดตั้ง Docker
-RUN apt-get update && apt-get install -y docker.io curl gnupg
+RUN apt-get update && apt-get install -y \
+    docker.io \
+    curl \
+    gnupg \
+    ca-certificates \
+    lsb-release
 
-# ติดตั้ง Node.js (v18)
-RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && \
-    apt-get install -y nodejs
+# ติดตั้ง docker compose (v2)
+# สร้างโฟลเดอร์ก่อนติดตั้ง docker compose
+RUN mkdir -p /usr/local/lib/docker/cli-plugins && \
+    curl -SL https://github.com/docker/compose/releases/download/v2.24.6/docker-compose-linux-x86_64 \
+    -o /usr/local/lib/docker/cli-plugins/docker-compose && \
+    chmod +x /usr/local/lib/docker/cli-plugins/docker-compose
 
-# ติดตั้ง Docker Compose (v1.29.2 ตัวเสถียร)
-RUN curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" \
-    -o /usr/local/bin/docker-compose && \
-    chmod +x /usr/local/bin/docker-compose
-
-# ให้ Jenkins ใช้ Docker ได้
+# ให้ Jenkins ใช้ docker ได้
 RUN usermod -aG docker jenkins
 
 USER jenkins
