--- a/compose.yml
+++ b/compose.yml
@@ -116,6 +116,10 @@ services:
       - frontend
       - backend
     restart: unless-stopped
+    # command: >
+    #   bash -c "
+    #   chmod 666 /var/run/docker.sock &&
+    #   /usr/bin/tini -- /usr/local/bin/jenkins.sh"
 
   nginx:
     container_name: nginx
