--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -9,16 +9,17 @@ RUN apt-get update && apt-get install -y \
     ca-certificates \
     lsb-release
 
-# สร้างโฟลเดอร์ก่อนติดตั้ง docker compose
+# ติดตั้ง Docker Compose (v2 CLI แบบ plugin)
 RUN mkdir -p /usr/local/lib/docker/cli-plugins && \
     curl -SL https://github.com/docker/compose/releases/download/v2.24.6/docker-compose-linux-x86_64 \
     -o /usr/local/lib/docker/cli-plugins/docker-compose && \
     chmod +x /usr/local/lib/docker/cli-plugins/docker-compose
 
-# คัดลอก entrypoint script เข้าไป
-COPY entrypoint.sh /usr/local/bin/entrypoint.sh
-RUN chmod +x /usr/local/bin/entrypoint.sh
-
-# ให้ Jenkins ใช้ docker ได้
+# เพิ่ม jenkins user เข้ากลุ่ม docker เพื่อใช้ docker CLI
 RUN usermod -aG docker jenkins
 
+# # คัดลอก entrypoint script เข้าไป
+# COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+# RUN chmod +x /usr/local/bin/entrypoint.sh
+
+USER jenkins
