--- a/compose.yml
+++ b/compose.yml
@@ -153,6 +153,9 @@ services:
       - SYSTEM=1      # อนุญาตให้รัน docker system commands เช่น system prune
       - POST=1         # สามารถส่ง POST ได้
       - DELETE=1       # สามารถส่ง DELETE ได้
+      - BUILD=1          # สำคัญสำหรับ buildkit
+      - PLUGINS=1        # ใช้ตอนเรียก build บางแบบ
+      - AUTH=1           # ใช้ตอน build image แบบ login
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro  # mount docker.sock แบบ read-only
     networks:
