--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,18 +4,25 @@ http {
     upstream frontend {
         server frontend:80;
     }
-
     upstream user_service {
         server user-service:5001;
     }
-
     upstream doctor_service {
         server doctor-service:5002;
     }
-
     upstream appointment_service {
         server appointment-service:5003;
     }
+    upstream prometheus {
+        server prometheus:9090;
+    }
+    upstream pgadmin {
+        server pgadmin:8085;
+    }
+    upstream grafana {
+        server grafana:3000;
+    }
+
 
     server {
         listen 80;
@@ -29,15 +36,55 @@ http {
         }
 
         location /api/users/ {
-            proxy_pass http://user_service/;
+            proxy_pass http://user_service;
+             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location /api/doctors/ {
-            proxy_pass http://doctor_service/;
+            proxy_pass http://doctor_service;
+             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location /api/appointments/ {
-            proxy_pass http://appointment_service/;
+            proxy_pass http://appointment_service;
+             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        location /pgadmin/ {
+            rewrite ^/pgadmin/(.*)$ /$1 break;
+            proxy_pass http://pgadmin;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /grafana/ {
+            proxy_pass http://grafana;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /prometheus/ {
+            rewrite ^/prometheus/(.*)$ /$1 break;
+            proxy_pass http://prometheus;
+            proxy_redirect / /prometheus/; # redirect header จาก Prometheus เช่น Location: /graph → ให้ rewrite เป็น /prometheus/graph
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
     }
 }
