--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -2,23 +2,21 @@ events {}
 
 http {
     upstream frontend {
-        server frontend:80;
+        server frontend:5173;
     }
-    upstream user_service {
-        server user-service:5001;
+    
+    upstream api_gateway {
+        server api-gateway:80;
     }
-    upstream doctor_service {
-        server doctor-service:5002;
-    }
-    upstream appointment_service {
-        server appointment-service:5003;
-    }
+
     upstream prometheus {
         server prometheus:9090;
     }
+
     upstream pgadmin {
-        server pgadmin:8085;
+        server pgadmin:80;
     }
+
     upstream grafana {
         server grafana:3000;
     }
@@ -35,33 +33,17 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/users/ {
-            proxy_pass http://user_service;
-             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /api/doctors/ {
-            proxy_pass http://doctor_service;
-             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /api/appointments/ {
-            proxy_pass http://appointment_service;
-             proxy_set_header Host $host;
+        location /api/ {
+            proxy_pass http://api_gateway;
+            proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location /pgadmin/ {
-            rewrite ^/pgadmin/(.*)$ /$1 break;
             proxy_pass http://pgadmin;
+            proxy_set_header X-Script-Name /pgadmin;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
