--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,12 @@
-FROM node:18-alpine AS build
+FROM node:20-alpine  
+
 WORKDIR /app
+
+COPY package.json package-lock.json ./
+RUN npm install
+
 COPY . .
 
-# ติดตั้ง dependencies ที่ขาดก่อน
-RUN npm install react-router-dom && \
-    npm install --save-dev @types/react-router-dom
+EXPOSE 5173
 
-# ติดตั้ง dependencies ที่เหลือ และ build
-RUN npm install && npm run build
-
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-EXPOSE 80
+CMD ["npm", "run", "dev", "--", "--host"]
