doctor service + front 60%

--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -25,8 +25,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Doctor-service: handles /api/doctors/, /api/init_genders, /api/doctor/<id>/available_times
-        location ~ ^/api/(doctor[s]?|init_genders)/ {
+        # Doctor-service: handles /api/doctors/, /api/doctor/<id>/available_times
+        location ~ ^/api/(doctor[s]?|genders)/ {
             proxy_pass http://doctor_service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
