--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -26,7 +26,7 @@ http {
         }
 
         # Doctor-service: handles /api/doctors/, /api/doctor/<id>/available_times
-        location ~ ^/api/(doctor[s]?|genders)/ {
+        location ~ ^/api/(doctor[s]?|doctor-genders)/ {
             proxy_pass http://doctor_service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -35,7 +35,7 @@ http {
         }
 
         # Appointment-service: handles /api/appointments/, /api/service_types/
-        location ~ ^/api/(appointments[s]?|service_types)/ {
+        location ~ ^/api/(appointment[s]?|service_types)/ {
             proxy_pass http://appointment_service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
